tests/neg/i7359-b.scala
trait SAMTrait
  def first(): String
  def notifyAll(): Unit // error
